--- a/pages/404.html
+++ b/pages/404.html
@@ -17,10 +17,10 @@
 </head>
 
 <body>
-    <main class="container">
-        <div class="right-column">
+    <main class="">
+        <div class="">
             <h1 class="main-title"><span>404</span></h1>
-            <p class="description">Page not found.</p>
+            <p class="main-title">Page not found.</p>
         </div>
     </main>
     <footer class="container bg-main">
