--- a/pages/404.html
+++ b/pages/404.html
@@ -20,29 +20,7 @@
     <main class="">
         <div class="">
             <h1 class="main-title"><span>404</span></h1>
-            <p class="main-title">Page not found.</p>
+            <p class="main-title"></p>
         </div>
     </main>
-    <footer class="container bg-main">
-        <div class="row socials">
-            <a class="fa fa-facebook" href="#"></a>
-            <a class="fa fa-twitter" href="#"></a>
-            <a class="fa fa-dribbble" href="#"></a>
-            <a class="fa fa-tumblr" href="#"></a>
-            <a class="fa fa-linkedin" href="#"></a>
-            <a class="fa fa-instagram" href="#"></a>
-            <a class="fa fa-wifi" href="#"></a>
-        </div>
-        <div class="row-short">
-            <img class="footer-logo" src="./img/matrox.png" alt="Logo">
-            <div class="text-trio">
-                <p>Copyright &copy; 2023 <a href="#">Matrox</a></p>
-                <p>All rights reserver</p>
-                <p>Designed by <a href="#" target="_blank">TrendyTheme</a></p>
-            </div>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti vel facere dolor accusantium vero modi <a href="#">Matrox</a> nihil nisi aperiam. Doloremque nihil nisi ducimus sunt ratione temporibus possimus, minima <a href="#">Matrox</a> laudantium.</p>
-        </div>
-    </footer>
-</body>
-
 </html>
